# lambo5utr

./: .gitignore  README.md  requirements.txt  run_script_bert.sh  run_script_cnn.sh  run_script_dnabert.sh  run_test.sh  setup.cfg  setup.py
cache_dir/: Sample2019_unmod1_initset1.csv  Sample2019_unmod1_initset2_numsample512_ConstructSample2019EGFP.csv  Sample2019_unmod1_initset3_numsample512_ConstructSample2019EGFP.csv  Sample2019_unmod1_initset4_numsample512_ConstructSample2019EGFP.csv  baseline_CastilloHair2024.csv  baseline_ga.csv
hydra_config/: black_box_opt.yaml
hydra_config/acquisition/: nehvi.yaml
hydra_config/encoder/: dnabert.yaml  dnabertlmhead.yaml  dnabertonly.yaml  mlm_cnn.yaml
hydra_config/optimizer/: lambo.yaml  mb_genetic.yaml  mf_genetic.yaml
hydra_config/surrogate/: multi_task_exact_gp.yaml  multi_task_exact_gp_cnn.yaml
hydra_config/task/: mrl_and_regex.yaml  regex_dna.yaml  task_mugd_cnn.yaml
hydra_config/tokenizer/: dna.yaml  dnakmer.yaml  dnapretrained.yaml
lambo5utr/: candidate.py  tokenizer.py  tokenizer_dnabert.py  transforms.py  utils.py  utils_mutations.py
lambo5utr/acquisitions/: ehvi.py  monte_carlo.py
lambo5utr/constructs/: construct_sample2019.py
lambo5utr/models/: base_surrogate.py  encoder_bert.py  gp_models.py  gp_utils.py  (+4 more)
misc/: run_deepg4.R  run_nullrecurrent.py
notebooks/: BERT_rank.csv  CNN_rank.csv  DNABERT_rank.csv  candidates.csv  compare_baseline.ipynb  compare_ranking.ipynb  init_rank.csv  sequence_selection.ipynb
python_scripts/: black_box_opt.py  test_dnabert.py  test_lambo.py  test_predictors.py
(+34 files in other folders)
