[metadata]
name = lambo5utr
version = 0.1.0
url = https://github.com/kkyamada/lambo5utr-prep
author = Keisuke Yamada
author_email = kkyamada1111@gmail.com
license_files = LICENSE
description = Latent Multi-objevtive Bayesian Optimization (LaMBO) model for human 5-prime UTR design
long_description = file: README.md
long_description_content_type = text/markdown

[options]
classifiers=[
        "Development Status :: 3",
        "Intended Audience :: Science/Research",
        "Programming Language :: Python :: 3.8"]